gcc/testsuite/g++.dg/gomp/block-6.C
// { dg-do compile }

void foo()
{
  #pragma omp ordered
    {
      return;		// { dg-error "invalid exit" }
    }
}
